--- a/styles/base.css
+++ b/styles/base.css
@@ -43,6 +43,10 @@ nav a:hover {
     width: 100%;
 }
 
+main {
+    max-width: 100%;
+}
+
 .card {
     margin: 1.2rem;
     border: 1px solid #000;
