--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -52,7 +52,7 @@ main > h2 {
 }
 
 .temple-card {
-    background-color: #cdb4db;
+    background-color: #c7bdcd;
     max-width: 500px;
     margin: 0 auto;
     border-radius: 10px;
