--- a/styles/form.css
+++ b/styles/form.css
@@ -9,7 +9,7 @@ header h1 {
     color: #fff;
     padding: 20px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lato, Helvetica, sans-serif;
 }
 
 main {
@@ -23,7 +23,7 @@ main {
 .name, .rating, .date, .use_product, .review, .name {
     padding: 10px 10px 5px;
     font-size: 1.1rem;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    font-family: Nunito, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
 }
 
 select, option, input[type="date"], textarea, input[type="text"] {
@@ -34,6 +34,10 @@ select, option, input[type="date"], textarea, input[type="text"] {
 }
 
 .rating, .date, .use_product, .review {
+    margin-top: 20px;
+}
+
+label {
     margin-top: 20px;
 }
 
@@ -58,7 +62,7 @@ input[type="checkbox"] {
 }
 
 label {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Josefin sans', Geneva, Tahoma, sans-serif;
 }
 
 textarea {
@@ -68,9 +72,9 @@ textarea {
 input[type="submit"] {
     padding: 10px;
     width: 97%;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-left: 3px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lato, Helvetica, sans-serif;
     font-size: 1.2rem;
     border-radius: 10px;
     border: none;
@@ -140,7 +144,7 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Nunito, Helvetica, sans-serif;
 }
   
   
