--- a/course-project/styles/project.css
+++ b/course-project/styles/project.css
@@ -265,6 +265,10 @@ form label {
     font-size: 1.2rem;
 }
 
+#form-description {
+    text-align: center;
+}
+
 input {
     padding: 20px;
     width: 24rem;
